cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MINIMUM_REQUIRED_VERSION ON)
project(OOP_Project VERSION 1.0)
set(SRC_FILES src/address.cpp src/person.cpp src/professor.cpp src/module.cpp src/assignment.cpp src/moduleInstance.cpp src/student.cpp )
add_executable(${PROJECT_NAME} src/main.cpp ${SRC_FILES} )